--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,1 +1,190 @@
-<p>user-card works!</p>
+<div class="row">
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                    <i class="fa fa-trash"></i>
+                </button>
+                <br>
+                <form>
+                    <div class="form-group">
+                        <label>NOM</label>
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                    </div>
+                    <div class="form-group">
+                        <label>PRENOM</label>
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                    </div>
+                    <div class="form-group">
+                        <label>NOMBRE D'ENFANTS</label>
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+
+    <div class="col-sm-4">
+        <div class="card" style="background-color: transparent; border-style: dashed; border-color: black;">
+            <div class="card-body" style="text-align: center;">
+                <button type="button" id="addUserCardBtn2" class="btn" style="font-size: 12.86em;">
+                    <i class="fa fa-plus"></i>
+                </button>
+            </div>
+        </div>
+        <!-- card.// -->
+    </div>
+
+
+</div>
