--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,184 +1,34 @@
 <div class="row">
-    <div class="col-sm-4">
-        <div class="card">
+    <div class="col-sm-4 " *ngFor="let user of userTab">
+        <div class="card sidebarCollapse">
             <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
+                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right" (click)="onDeleteUser(user)">
                     <i class="fa fa-trash"></i>
                 </button>
                 <br>
                 <form>
+                  <input type="hidden" name="id" id="id" [value]="user._id">
                     <div class="form-group">
                         <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
+                        <input type="text" name="Nom" class="form-control" placeholder="Nom" [value]="user._nom" disabled>
                     </div>
                     <div class="form-group">
                         <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
+                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom" [value]="user._prenom" disabled>
                     </div>
                     <div class="form-group">
                         <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                        <input type="number" name="nbEnfants" id="nbEnfants" class="form-control" value="0" min="0" [ngModel]="user._nombre_enfants" #nbr  [value]="user._nombre_enfants" (change)="onchangeNbrEnfant(nbr, user._id)">
                     </div>
                 </form>
             </div>
         </div>
         <!-- card.// -->
     </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div class="card-body">
-                <button type="button" id="deleteUserCardBtn" class="btn btn-primary pull-right">
-                    <i class="fa fa-trash"></i>
-                </button>
-                <br>
-                <form>
-                    <div class="form-group">
-                        <label>NOM</label>
-                        <input type="text" name="Nom" class="form-control" placeholder="Nom">
-                    </div>
-                    <div class="form-group">
-                        <label>PRENOM</label>
-                        <input type="text" name="Prenom" class="form-control" placeholder="Prenom">
-                    </div>
-                    <div class="form-group">
-                        <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
-                    </div>
-                </form>
-            </div>
-        </div>
-        <!-- card.// -->
-    </div>
-
     <div class="col-sm-4">
         <div class="card" style="background-color: transparent; border-style: dashed; border-color: black;">
             <div class="card-body" style="text-align: center;">
-                <button type="button" id="addUserCardBtn2" class="btn" style="font-size: 12.86em;">
+                <button type="button" id="addUserCardBtn2" class="btn" style="font-size: 12.86em;" data-toggle="modal" data-target="#addUserModal">
                     <i class="fa fa-plus"></i>
                 </button>
             </div>
@@ -187,4 +37,40 @@
     </div>
 
 
+</div>
+
+
+
+<!-- Add User Modal -->
+<div class="modal fade" id="addUserModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">Ajouter Un Nouveau Utilisateur</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label>NOM</label>
+            <input type="text" name="Nom" class="form-control" placeholder="Nom" required>
+          </div>
+          <div class="form-group">
+            <label>PRENOM</label>
+            <input type="text" name="Prenom" class="form-control" placeholder="Prenom" required>
+          </div>
+          <div class="form-group">
+            <label>NOMBRE D'ENFANTS</label>
+            <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-primary">Enregistrer</button>
+      </div>
+    </div>
+  </div>
 </div>
