--- a/src/app/config-side-bar/config-side-bar.component.html
+++ b/src/app/config-side-bar/config-side-bar.component.html
@@ -9,6 +9,7 @@
 <body>
 
     <div class="wrapper d-flex align-items-stretch">
+
         <nav id="sidebar">
             <div class="sidebar-body p-4 pt-5">
                 <label style="font-size: 1.8em;">
@@ -26,33 +27,15 @@
                     </div>
                     <div class="form-group">
                         <label>NOMBRE D'ENFANTS</label>
-                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0">
+                        <input type="number" name="nbEnfants" class="form-control" value="0" min="0" disabled>
                     </div>
                 </form>
 
             </div>
         </nav>
-
-        <!-- Page Content  -->
-        <div id="content" class="p-4 p-md-5">
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-                <i class="fa fa-bars"></i>
-            </button>
-
-
-
-            <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
-                <button type="button" id="addUserCardBtn" class="btn btn-success">
-                    <i class="fa fa-plus-circle mr-2"></i> ADD
-                </button>
-                <button type="button" id="addUserCardBtn1" class="btn btn-primary">
-                    <i class="fa fa-refresh mr-2"></i> LOAD
-                </button>
-            </div>
-
-            <app-user-card></app-user-card>
-        </div>
     </div>
+
+
 </body>
 
 </html>
